# hand-tododesk

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-desktop.yml
.superpowers/brainstorm/55452-1782571172/content/: approach-options.html  backend-contract.html  design-flow.html  template-size-model.html
.superpowers/brainstorm/55452-1782571172/state/: server-stopped
apps/api/: .env.example  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.test.ts  app.ts  config.ts  db.test.ts  db.ts  server.ts
apps/api/src/plugins/: auth.ts
apps/api/src/routes/: ai.test.ts  ai.ts  anniversaries.test.ts  anniversaries.ts  app-bootstrap.ts  auth.test.ts  auth.ts  habits.test.ts  (+12 more)
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/patches/tauri-runtime-wry-2.11.2/src/: lib.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/tests/: floating_window_capabilities.rs  windows_subsystem.rs
docs/superpowers/plans/: 2026-06-26-desktop-floating-card-sync.md  2026-06-27-gugu-printer-print-share.md  2026-07-10-ai-assistant.md  2026-07-10-ai-proposal-state-hydration.md
docs/superpowers/specs/: 2026-06-27-gugu-printer-design.md  2026-07-10-ai-assistant-design.md  2026-07-10-ai-proposal-state-hydration-design.md
(+161 files in other folders)
