[package]
name = "tododesk"
version = "0.2.30"
description = "小柴记 desktop app"
authors = ["小柴记"]
edition = "2021"

[lib]
name = "tododesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# Work around a macOS startup crash in wry::webview_version() before WebKit
# initialization. Remove this patch after upstream avoids that probe on macOS.
[patch.crates-io]
tauri-runtime-wry = { path = "patches/tauri-runtime-wry-2.11.2" }
